# fictionary-rs

./: .gitignore  Cargo.toml  Justfile  LICENSE.txt  Makefile  README.md
.github/workflows/: release.yml  rust.yml
ci/: build-and-publish-m2
data/: american.charkov  american.words  british.charkov  british.words  english.charkov  english.words
src/: main.rs  model.rs  sys_linux.rs  sys_mac.rs  sys_windows.rs
