[package]
name = "fictionary"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
color-eyre = "0.6.3"
counter = "0.5.7"
directories = "5.0.1"
eyre = "0.6.12"
postcard = { version = "1.0.8", features = ["use-std", "alloc"] }
serde = "1.0.203"
thiserror = "1.0.61"
weighted_rand = "0.4.2"
